Using string literal character encoding - Maven on Azure didn't like StandardCharsets.UTF_8